# n8n-cli

./: Cargo.toml  README.md  install-claude-skill
.claude/skills/n8n/: SKILL.md
.claude/skills/n8n/examples/: data-sync-schedule.json  error-handling.json  webhook-to-slack.json
docs/: README.md  configuration.md  getting-started.md
docs/commands/: README.md  credentials.md  executions.md  health.md  tags.md  workflows.md
docs/development/: adding-commands.md  api-client.md  architecture.md  code-structure.md  contributing.md  error-handling.md  models.md
docs/guides/: claude-skill.md  editing-workflows.md  running-workflows.md  scripting.md
src/: error.rs  lib.rs  main.rs
src/cli/: app.rs  credentials.rs  executions.rs  health.rs  mod.rs  tags.rs  workflows.rs
src/client/: api.rs  mod.rs  pagination.rs
src/client/endpoints/: credentials.rs  executions.rs  health.rs  mod.rs  tags.rs  workflows.rs
src/config/: loader.rs  mod.rs
src/diff/: mod.rs  workflow_diff.rs
src/editor/: external.rs  mod.rs
src/models/: common.rs  connection.rs  credential.rs  execution.rs  mod.rs  node.rs  tag.rs  workflow.rs
src/output/: format.rs  json.rs  mod.rs  table.rs
src/skill/: mod.rs
src/validation/: mod.rs  workflow.rs
